# edupsyadmin

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  CHANGELOG.md  LICENSE.txt  README.md  lrst_documentation.sh  pyproject.toml  requirements.txt  setup.py  snapshot_report.html
.github/workflows/: coverage.yml
alembic/: env.py
doc/: conf.py  index.rst
docs/: clients_model.rst  conf.py  faq.rst  index.rst
docs/tutorial/: addingclients.rst  cli.rst  configuration.rst  creatingdocumentation.rst  editingclients.rst  encryption.rst  helpfunction.rst  installation.rst  tui.rst  update.rst
docs/usage/: installation.rst
etc/: config.yml
shellscripts/: ExtractStudentFromCsv.sh  add_iLst.sh  add_iRst.sh  add_lrst.sh  add_na_nons.sh  add_nona_nons.sh  add_ns_and_na.sh  add_to_db_from_csv.sh  add_to_db_interactive.sh  change_keyword_taet.sh  change_keywordtaet_nsessions.sh  inklusion_documentation.sh  lrst_documentation.sh  lrst_documentation_bsmn.sh  mantelbogen.sh  profile.sh  report.sh  taetigkeitsbericht.sh
src/edupsy_admin/: __init__.py  __main__.py  __version__.py  cli.py
src/edupsy_admin/api/: __init__.py  academic_year.py  add_convenience_data.py  cft_report.py  check_key_taetigkeitsbereicht.py  clients.py  convert_measures.py  create_tbl_lrst.py  create_tbl_names.py  create_tbl_sessions.py  datediff.py  encrypt.py  fill_form.py  flatten_pdf.py  hello.py  int_from_str.py  lgvt.py  lrst.py  managers.py  reports.py  sessions.py  taetigkeitsbericht_analysis.py  taetigkeitsbericht_check_key.py  taetigkeitsbericht_entry_interactive.py  taetigkeitsbericht_from_db.py  utils_sql.py
src/edupsy_admin/core/: __init__.py  config.py  create_tbl_lrst.py  create_tbl_names.py  create_testcsv.py  encrypt.py  logger.py  ui.py  utils_sql.py
src/edupsy_admin/data/: taetigkeitsbericht_categories_SJ202223.ods  taetigkeitsbericht_categories_SJ202324.ods
src/edupsyadmin/: __init__.py  __version__.py  alembic.ini  cli.py  info.py  tui.py
src/edupsyadmin/alembic/: env.py  script.py.mako
src/edupsyadmin/alembic/versions/: 2026_02_21_0453-4087c43f0c7c_initial_migration.py  2026_03_02_1222-635a9d68fbe8_add_case_active_column_to_clients.py  2026_03_13_0545-ea4c3f900604_encrypt_class_columns.py  2026_03_13_0620-515a72d06f10_encrypt_derived_dates.py  2026_03_16_0900-d7e8f9a0b1c2_add_metadata_table.py  2026_03_23_1030-e2b4c6d8f0a1_encrypt_sensitive_text_fields.py  2026_04_10_1200-f3a5b7c9d1e2_set_encrypted_text_fields_non_nullable.py  2026_06_12_0509-0f1497df963e_add_class_int_override.py
src/edupsyadmin/api/: __init__.py  academic_year.py  add_convenience_data.py  cft_report.py  client_view.py  clients.py  display_client_details.py  exceptions.py  fill_form.py  flatten_pdf.py  lgvt.py  managers.py  migration.py  migration_fs.py  reports.py  setup_demo.py  taetigkeitsbericht_from_db.py  types.py
src/edupsyadmin/api/flattening/: __init__.py  api.py  base.py  flatten_fillpdf.py  flatten_pdf2image.py  flatten_pypdf.py  pypdf_backend.py
src/edupsyadmin/cli/: __init__.py  __main__.py  utils.py
src/edupsyadmin/cli/commands/: create_documentation.py  delete_client.py  edit_config.py  flatten_pdfs.py  get_clients.py  info.py  migrate_encryption.py  mk_report.py  new_client.py  rotate_key.py  set_client.py  setup_demo.py  tui.py  (+1 more)
src/edupsyadmin/core/: academic_year.py  config.py  convert_measures.py  datediff.py  encrypt.py  enums.py  logger.py  paths.py  taetigkeitsbericht_check_key.py
src/edupsyadmin/data/: Faecher_BfsKi.txt  sampleconfig.yml  taetigkeitsbericht_categories_SJ202324.ods
src/edupsyadmin/db/: clients.py  column_types.py  converters.py
src/edupsyadmin/tui/: clients_overview.py  clients_overview_app.py  dialogs.py  edit_client.py  edit_client_app.py  editclient.py  editclient.tcss  editconfig.py  editconfig.tcss  editconfig_app.py  edupsyadmintui.py  edupsyadmintui.tcss  fill_form_app.py  fill_form_widget.py
src/edupsyadmin/utils/: __init__.py  academic_year.py  convert_measures.py  int_from_str.py  path_utils.py  python_type.py  rounding.py  taetigkeitsbericht_check_key.py
test/data/: sampleconfig.yml  webuntis_example.csv
test/edupsy_admin/: test_api.py  test_cli.py
test/edupsy_admin/api/: conftest.py  create_pdf_form.py  test_academic_year.py  test_add_convenience_data.py  test_clients.py  test_convert_measures.py  test_datediff.py  test_fill_form.py  test_flatten_pdf.py  test_managers.py
test/edupsy_admin/core/: test_config.py  test_encrypt.py  test_logger.py  time_encrypt.py
test/edupsyadmin/: conftest.py  sample_pdf_form.py  snapshot_utils.py  test_cli.py  test_gdpr_logging.py  test_sync_types.py
test/edupsyadmin/api/: conftest.py  sample_pdf_form.py  test_add_convenience_data.py  test_cft_report.py  test_client_view.py  test_decryption_behavior.py  test_fill_form.py  test_fill_form_snapshots.py  test_flatten_pdf.py  test_flatten_pdf_snapshots.py  test_lgvt.py  test_lgvt_snapshots.py  test_managers.py  test_migration.py  test_migration_fs.py  test_reports.py  test_snapshot_sensitivity.py  test_taetigkeitsbericht_from_db.py  test_write_form_md.py
test/edupsyadmin/benchmark/: test_cli_benchmark.py  test_convenience_data_benchmark.py  test_decryption_benchmark.py  test_encrypt_benchmark.py  test_key_derivation_benchmark.py
test/edupsyadmin/cli/: test_utils.py
test/edupsyadmin/core/: test_config.py  test_encrypt.py  test_logger.py
test/edupsyadmin/db/: test_class_int_override.py  test_clients.py  test_metadata.py  test_types.py
test/edupsyadmin/tui/: test_clientsoverview.py  test_dialogs.py  test_editclient.py  test_editconfig.py  test_edupsyadmintui.py  test_fill_form_tui.py
test/edupsyadmin/utils/: test_academic_year.py  test_convert_measures.py  test_datediff.py  test_int_from_str.py  test_path_utils.py  test_python_type.py  test_taetigkeitsbericht_check_key.py
