[project]
name = "edupsy-admin"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataframe-image>=0.2.6",
    "fpdf>=1.7.2",
    "keyring>=25.5.0",
    "pandas>=2.2.3",
    "platformdirs>=4.3.6",
    "python-dotenv>=1.0.1",
    "python-liquid>=1.12.1",
    "pyyaml>=6.0.2",
    "scipy>=1.14.1",
    "sqlalchemy>=2.0.36",
]
