[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edupsy-admin"
authors=[
    {name = "Lukas Liebermann"}
]
dynamic = ["version"]
description = "edupsy_admin provides tools to help school psychologists with their documentation"
readme = "README.md"
requires-python = ">=3.11"
homepage = "https://github.com/LKirst/edupsy_admin.git"
license = { text = "MIT" }
dependencies = [
    "cryptography>=43.0.3",
    "dataframe-image>=0.2.6",
    "fillpdf>=0.7.3",
    "fpdf>=1.7.2",
    "keyring>=25.5.0",
    "matplotlib>=3.9.2",
    "odfpy>=1.4.1",
    "pandas>=2.2.3",
    "platformdirs>=4.3.6",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.1",
    "python-liquid>=1.12.1",
    "pyyaml>=6.0.2",
    "scipy>=1.14.1",
    "sqlalchemy>=2.0.36",
]

[project.scripts]
edupsy_admin = "edupsy_admin.cli:main"

[tool.hatch.version]
path = "src/edupsy_admin/__version__.py"

[tool.commitizen]
version = "0.2.0"
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true

[dependency-groups]
dev = [
    "bitwarden-keyring>=0.3.1",
    "commitizen>=3.31.0",
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.3.241009",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "reportlab>=4.2.5",
]
