[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "edupsyadmin"
version = "9.0.0a0"
description = "edupsyadmin provides tools to help school psychologists with their documentation"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Lukas Liebermann" } ]
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "alembic>=1.14.1",
  "cryptography>=43.0.3",
  "fillpdf>=0.7.3",
  "keyring>=25.5",
  "pandas>=2.2.3",
  "platformdirs>=4.3.6",
  "pydantic>=2.12.3",
  "pypdf>=5.1",
  "python-dateutil>=2.9.0.post0",
  "python-liquid>=1.12.1",
  "pyyaml>=6.0.2",
  "rich>=14.3.3",
  "scipy>=1.14.1",
  "sqlalchemy>=2.0.36",
  "textual>=8",
]
optional-dependencies.bwbackend = [ "bitwarden-keyring>=0.3.1" ]
optional-dependencies.flattenpdf = [ "pdf2image>=1.17" ]
optional-dependencies.reportsandtaetigkeitsber = [
  "dataframe-image>=0.2.6",
  "matplotlib>=3.9.2",
  "numpy>=2.4.4",
  "reportlab>=4.2.5",
]
urls.documentation = "https://edupsyadmin.readthedocs.io"
urls.homepage = "https://github.com/LKirst/edupsyadmin.git"
scripts.edupsyadmin = "edupsyadmin.cli:main"

[dependency-groups]
dev = [
  "commitizen>=3.31",
  "deptry>=0.25.1",
  "pandas-stubs>=2.2.3.241009",
  "prek>=0.3.8",
  "pytest>=8.3.3",
  "pytest-asyncio>=1",
  "pytest-benchmark>=5.2",
  "pytest-cov>=6",
  "pytest-textual-snapshot>=1.1",
  "pytest-xdist>=3.6.1",
  "snakeviz>=2.2.2",
  "sphinx>=8.1.3",
  "sphinx-design>=0.6.1",
  "sphinx-rtd-theme>=3.0.2",
  "textual-dev>=1.7",
  "ty>=0.0.20",
  "types-defusedxml>=0.7.0.20240218",
  "types-greenlet>=3.1.0.20241221",
  "types-openpyxl>=3.1.5.20241225",
  "types-python-dateutil>=2.9.0.20241206",
  "types-pyyaml>=6.0.12.20241221",
]

[tool.hatch]
build.targets.wheel.shared-data = { "src/edupsyadmin/alembic" = "edupsyadmin/alembic", "src/edupsyadmin/alembic.ini" = "edupsyadmin/alembic.ini" }

[tool.uv]
exclude-newer = "3d"

[tool.ruff]
lint.select = [
  "A",
  "ARG",  # flake8-unused-arguments – flag unused, shadowed or *args/**kwargs
  "B",
  "C4",   # flake8-comprehensions – point out sub-optimal list/dict/set comps
  "C901", # checks for functions with a high McCabe complexity
  "COM",  # flake8-commas
  "E",
  "F",
  "I",
  "ISC",  # flake8-implicit-str-concat - implicitly string concatenation
  "N",
  "PERF", # perflint - a linter for performance anti-patterns
  "PTH",  # flake8-use-pathlib - find use of function that could be replaced by pathlib
  "RET",  # flake8-return – keep return statements consistent and meaningful
  "RUF",  # Ruff-native extras – small bug-catchers & style nits not in other sets "UP",
  "SIM",  # flake8-simplify – suggest clearer, shorter boolean / loop logic
  "TID",  # flake8-tidy-imports – ban unused or overly-relative imports
  "UP",   # pyupgrade – rewrite to modern Python syntax (f-strings, walrus, etc.)
  "W",
]
lint.ignore = [ "COM812" ]
lint.per-file-ignores."src/edupsyadmin/db/clients.py" = [ "ARG002" ]
lint.per-file-ignores."src/edupsyadmin/tui/*" = [ "A002", "ARG" ]
lint.per-file-ignores."test/*" = [ "ARG" ]
lint.flake8-tidy-imports.ban-relative-imports = "all"

[tool.ty]
terminal.error-on-warning = true

[tool.pytest]
ini_options.addopts = "--benchmark-skip"
ini_options.testpaths = [ "test" ]
ini_options.python_files = "test_*.py"
ini_options.python_classes = "Test*"
ini_options.python_functions = "test_*"

[tool.coverage]
run.omit = [
  "src/edupsyadmin/api/cft_report.py",
  "src/edupsyadmin/api/lgvt.py",
  "src/edupsyadmin/api/reports.py",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
version_files = [ "src/edupsyadmin/__version__.py" ]

[tool.rstcheck]
ignore_directives = [ "tab-set", "dropdown", "automodule", "autoclass" ]

[tool.rumdl]
exclude = [ "CHANGELOG.md" ]
